--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   shared_preferences: ^2.0.15
   isar: 3.1.0
   isar_flutter_libs: 3.1.0
+  flutter_riverpod: ^2.4.9
+
 
   #architecture
   event_bus: ^2.0.0
